--- a/main.html
+++ b/main.html
@@ -9,28 +9,72 @@
 </head>
 <body>
 
-    <h1 onclick="toggleList('liga')">M. La Liga</h1>
+    <h1 onclick="toggleList('liga')">
+        M. La Liga
+        <img src="https://upload.wikimedia.org/wikipedia/commons/0/0b/LaLiga_por_Movistar_Plus%2B_2022_logo.svg" alt="Icono M. La Liga" width="100" height="100" />
+    </h1>
     <ul id="liga">
+        <li><a href="acestream://dce1579e3a2e5bd29071fca8eae364f1eb3205cf" target="_blank">M. LaLiga 4K</a></li>
         <li><a href="acestream://aa82e7d4f03061f2144a2f4be22f2e2210d42280" target="_blank">M. LaLiga 1080P</a></li>
-        <li><a href="acestream://f031f5728b32f6089dda28edebe990cf198108d8" target="_blank">M. LaLiga 720</a></li>
         <li><a href="acestream://7d8c87e057be98f00f22e23b23fbf08999e4b02f" target="_blank">M. LaLiga 1080 MultiAudio - 1</a></li>
         <li><a href="acestream://1969c27658d4c8333ab2c0670802546121a774a5" target="_blank">M. LaLiga 1080 MultiAudio - 2</a></li>
-        <li><a href="acestream://dce1579e3a2e5bd29071fca8eae364f1eb3205cf" target="_blank">M. LaLiga 4K</a></li>
+        <li><a href="acestream://f031f5728b32f6089dda28edebe990cf198108d8" target="_blank">M. LaLiga 720</a></li>
         <li><a href="acestream://26029f72a4ca831d09deefe89534818db1d105bc" target="_blank">M. LaLiga 2 1080</a></li>
         <li><a href="acestream://80126b240f3e4e004754fd8f8103e857ab2556a0" target="_blank">M. LaLiga 2 720</a></li>
         <li><a href="acestream://4c4844564313e39a888f593511f299f5ba3cf929" target="_blank">M. LaLiga 3 1080</a></li>
+        <li><a href="acestream://aa8f826da70e27a26b29c7b32402f17e8a67a8b0" target="_blank">M. LaLiga 4 1080</a></li>
+        <li><a href="acestream://535394f62a810bc5aeb25be75ea5ff7d03e070b2" target="_blank">M. LaLiga 5 1080</a></li>
+        <li><a href="acestream://c896d37778f9e43549a788fc22206a655895b51b" target="_blank">M. LaLiga 6 1080</a></li>
+        <li><a href="acestream://aa82e7d4f03061f2144a2f4be22f2e2210d42280" target="_blank">La Liga BAR 1080</a></li>
     </ul>
 
-    <h1 onclick="toggleList('campeones')">M.L. Campeones</h1>
+    <h1 onclick="toggleList('smartbank')">
+        LaLiga Smartbank
+        <img src="https://upload.wikimedia.org/wikipedia/commons/8/83/LaLiga_SmartBank_TV_logo.svg" alt="Icono 1" width="100" height="100" />
+    </h1>
+    <ul id="smartbank">
+        <li><a href="acestream://4c46585214b23b1d802ef2168060c7649a3894cf" target="_blank">LaLiga Smartbank 1080</a></li>
+        <li><a href="acestream://06b367c22394a1358c9cefa0cb5d0b64b9b2b3f4" target="_blank">LaLiga Smartbank 720</a></li>
+        <li><a href="acestream://d81b4f2f3fde433539c097b2edc9b587ca47b087" target="_blank">LaLiga Smartbank 2 1080</a></li>
+        <li><a href="acestream://2709d0ab86cb6ce7ba4d3ad188d7fa80668f2924" target="_blank">LaLiga Smartbank 2 720</a></li>
+        <li><a href="acestream://b4a076c1f67a5c1f1ba899ac61b9401b1dc30f41" target="_blank">LaLiga Smartbank 3</a></li>
+        <li><a href="acestream://2cacf21476b036e319bcb7c7e747766e6ccc082e" target="_blank">LaLiga Smartbank 4</a></li>
+        <li><a href="acestream://a1146358aa50c99c887108b17f62f9264186a16a" target="_blank">LaLiga Smartbank 5</a></li>
+        <li><a href="acestream://7a9bb1b9cccb759c44ed84f3c1283922e6854670" target="_blank">LaLiga Smartbank 6</a></li>
+        <li><a href="acestream://446e73a22582921393b020ed08b768ad8e14d754" target="_blank">LaLiga Smartbank 7</a></li>
+        <li><a href="acestream://4d52fc1994fe927702aeb7bc8778e2f23b1260e2" target="_blank">LaLiga Smartbank 8</a></li>
+    </ul>
+
+    <h1 onclick="toggleList('campeones')">
+        M.L. Campeones
+        <img src="https://upload.wikimedia.org/wikipedia/commons/e/ec/Movistar_Liga_de_Campeones.svg" alt="Icono M. La Liga" width="100" height="100" />
+    </h1>
     <ul id="campeones">
+        <li><a href="acestream://931b1984badcb821df7b47a66ac0835ac871b51c" target="_blank">M.L. Campeones 1080 Multiaudio</a></li>
+        <li><a href="acestream://f096a64dd756a6d549aa7b12ee9acf7eee27e833" target="_blank">M.L. Campeones 1080 MultiAudio</a></li>
         <li><a href="acestream://1d79a7543d691666135669f89f3541f54e2dd0a9" target="_blank">M.L. Campeones 1080P</a></li>
         <li><a href="acestream://e2e2aca792aae5da19995ac516b1d620531bd49c" target="_blank">M.L. Campeones 720</a></li>
-        <li><a href="acestream://931b1984badcb821df7b47a66ac0835ac871b51c" target="_blank">M.L. Campeones 1080 Multiaudio - 1</a></li>
-        <li><a href="acestream://f096a64dd756a6d549aa7b12ee9acf7eee27e833" target="_blank">M.L. Campeones 1080 MultiAudio - 2</a></li>
         <li><a href="acestream://fc2fe31b0bce25e2dc7ab4d262bf645e2be5a393" target="_blank">M.L. Campeones 2 1080</a></li>
+        <li><a href="acestream://6753492c1908274c268a1b28e2a054a0ff8f86f9" target="_blank">M.L. Campeones 2 720</a></li>
+        <li><a href="acestream://ad372cba73aa0ece207a79532b3e30b731136bb2" target="_blank">M.L. Campeones 3 1080</a></li>
+        <li><a href="acestream://d59fe9978eed49f256b312a60671b5bce43d3f24" target="_blank">M.L. Campeones 3 720</a></li>
+        <li><a href="acestream://f2df4f96b23388b45e75d848a48a510cf8af560f" target="_blank">M.L. Campeones 4 1080</a></li>
+        <li><a href="acestream://67b353ab1c4c2f6396b3ca5c4b45023bd9927561" target="_blank">M.L. Campeones 5 1080</a></li>
+        <li><a href="acestream://64a9353032efa2acb093d0bb86481f20f482d47e" target="_blank">M.L. Campeones 6 1080</a></li>
+        <li><a href="acestream://5932623d2fd7ed16b01787251b418e4f59a01cda" target="_blank">M.L. Campeones 7 SD</a></li>
+        <li><a href="acestream://6c445141445b06d7b4328d80e2dd936bd0ca52ca" target="_blank">M.L. Campeones 8 1080</a></li>
+        <li><a href="acestream://7244379f8f6382d40afec871fb8e4219a803840b" target="_blank">M.L. Campeones 9 SD</a></li>
+        <li><a href="acestream://d42e1b592b840ea34394fd3e1b1d3a4d0f399213" target="_blank">M.L. Campeones 10 SD</a></li>
+        <li><a href="acestream://e737c681a92a4328703761c6ed9d8a951655f3e4" target="_blank">M.L. Campeones 11 SD</a></li>
+        <li><a href="acestream://bb50397b3f49167eed95264005fae851baa7e3ee" target="_blank">M.L. Campeones 12 SD</a></li>
+        <li><a href="acestream://60296c246e3596f334903fefd48cfaa724a5053b" target="_blank">M.L. Campeones 13 SD</a></li>
     </ul>
+    
 
-    <h1 onclick="toggleList('daznLiga')">DAZN La Liga</h1>
+    <h1 onclick="toggleList('daznLiga')">
+        DAZN La Liga
+        <img src="https://upload.wikimedia.org/wikipedia/commons/9/98/DAZN_LaLiga_2023_Logo.svg" alt="Icono M. La Liga" width="100" height="100" />
+    </h1>
     <ul id="daznLiga">
         <li><a href="acestream://1960a9be8ae9e8c755330218eac4c5805466290a" target="_blank">DAZN LaLiga 1080 MultiAudio - 1</a></li>
         <li><a href="acestream://75251ba975132ec9a202806ba5bf606e87280c96" target="_blank">DAZN LaLiga 1080 MultiAudio - 2</a></li>
@@ -40,17 +84,75 @@
         <li><a href="acestream://02b9307c5c97c86914cc5939d6bbeb5b4ec60b47" target="_blank">DAZN LaLiga 2 720</a></li>
     </ul>
 
-    <h1 onclick="toggleList('dazn')">DAZN</h1>
+    <h1 onclick="toggleList('dazn')">
+        DAZN
+        <img src="https://upload.wikimedia.org/wikipedia/commons/7/71/DAZN_logo.svg" alt="Icono M. La Liga" width="100" height="100" />
+    </h1>
     <ul id="dazn">
+        <li><a href="acestream://1960a9be8ae9e8c755330218eac4c5805466290a" target="_blank">DAZN LaLiga 1080 MultiAudio</a></li>
+        <li><a href="acestream://75251ba975132ec9a202806ba5bf606e87280c96" target="_blank">DAZN LaLiga 1080 MultiAudio</a></li>
+        <li><a href="acestream://a3bca895c58d3fc7d5e4259d3d5e3cf0291d1914" target="_blank">DAZN LaLiga 720</a></li>
+        <li><a href="acestream://e33e666c393ef04ebe99a9b92135d2e0b48c4d10" target="_blank">DAZN LaLiga 2 1080 MultiAudio</a></li>
+        <li><a href="acestream://0950c37fe1ea817fc561c611ae943d58505f7a79" target="_blank">DAZN LaLiga 2 720 MultiAudio</a></li>
+        <li><a href="acestream://02b9307c5c97c86914cc5939d6bbeb5b4ec60b47" target="_blank">DAZN LaLiga 2 720</a></li>
+        <li><a href="acestream://8c71f0e0a5476e10950fc827f9d2a507340aba74" target="_blank">DAZN LaLiga 3 1080 MultiAudio</a></li>
+        <li><a href="acestream://2792a8a5f4a3f53cd72dec377a2639cd12a6973e" target="_blank">DAZN LaLiga 4 1080 MultiAudio</a></li>
+        <li><a href="acestream://99e544cddbee13798e854c1009ee7d1a93fdedf7" target="_blank">DAZN LaLiga 5 1080 MultiAudio</a></li>
         <li><a href="acestream://8ca07071b39185431f8e940ec98d1add9e561639" target="_blank">DAZN 1 1080</a></li>
         <li><a href="acestream://eaff9293c76a324c750ef5094c2a4e2c96518d1f" target="_blank">DAZN 1 720</a></li>
+        <li><a href="acestream://60dbeeb299ec04bf02bc7426d827547599d3d9fc" target="_blank">DAZN 2 1080</a></li>
+        <li><a href="acestream://7aa402bab9fff43258fbcf401881a39475f30aaf" target="_blank">DAZN 2 720</a></li>
+        <li><a href="acestream://a8ffddef56f082d4bb5c0be0d3d2fdd8c16dbd97" target="_blank">DAZN 3 1080</a></li>
+        <li><a href="acestream://2fcdf7a19c0858f686efdfabd3c8c2b92bf6bcfd" target="_blank">DAZN 4 1080</a></li>
     </ul>
 
-    <h1 onclick="toggleList('daznF1')">DAZN F1</h1>
+    <h1 onclick="toggleList('daznF1')">
+        DAZN F1
+        <img src="https://upload.wikimedia.org/wikipedia/commons/e/e4/DAZN_F1_logo.svg" alt="Icono M. La Liga" width="100" height="100" />
+    </h1>
     <ul id="daznF1">
-        <li><a href="acestream://5789ca155323664edd293b848606688edf803f4d" target="_blank">DAZN F1 1080 (Fórmula 1)</a></li>
-        <li><a href="acestream://9dad717d99b29a05672166258a77c25b57713dd5" target="_blank">DAZN F1 1080 (Fórmula 1)</a></li>
-        <li><a href="acestream://e1fcad9de0c782c157fde6377805c58297ab65c2" target="_blank">DAZN F1 720 (Fórmula 1)</a></li>
+        <li><a href="acestream://968627d24eec1c16b51d88e4a4a6c02211e3346e" target="_blank">DAZN F1 Multicámara (Fórmula 1)</a></li>
+    <li><a href="acestream://6b94479c24898700089e6b87d28a3ccc72dc4041" target="_blank">DAZN F1 UHD (Fórmula 1)</a></li>
+    <li><a href="acestream://5789ca155323664edd293b848606688edf803f4d" target="_blank">DAZN F1 1080 (Fórmula 1)</a></li>
+    <li><a href="acestream://9dad717d99b29a05672166258a77c25b57713dd5" target="_blank">DAZN F1 1080 (Fórmula 1)</a></li>
+    <li><a href="acestream://e1fcad9de0c782c157fde6377805c58297ab65c2" target="_blank">DAZN F1 720 (Fórmula 1)</a></li>
+    <li><a href="acestream://600222a4f98df80a2c0df2d60cb5ff3df9620710" target="_blank">DAZN liga F1</a></li>
+    <li><a href="acestream://d6cdd724a97fcf851e7ef641c28d6beb8663496e" target="_blank">DAZN liga F2</a></li>
+    <li><a href="acestream://162942adc047d0f78eac056effbe5bbec54a5e51" target="_blank">DAZN liga F3</a></li>
+    <li><a href="acestream://e454681a152a86da504e63694f17f90d0586867d" target="_blank">DAZN liga F4</a></li>
     </ul>
+
+    <h1 onclick="toggleList('m-deportes')">
+        M. Deportes
+        <img src="https://upload.wikimedia.org/wikipedia/commons/3/32/Movistar_Deportes.svg" alt="Icono M. La Liga" width="100" height="100" />
+    </h1>
+    <ul id="m-deportes">
+        <li><a href="acestream://d00223931b1854163e24c5c22475015d7d45c112" target="_blank">M. Deportes 1080 (Link 1)</a></li>
+        <li><a href="acestream://acb510858f34c3c6fd5f79395b031abd6885c2b3" target="_blank">M. Deportes 1080 (Link 2)</a></li>
+        <li><a href="acestream://77d83a79afcf6c865289cd8cdb42223cd4b6501c" target="_blank">M. Deportes 720</a></li>
+        <li><a href="acestream://e6f06d697f66a8fa606c4d61236c24b0d604d917" target="_blank">M. Deportes 2 1080</a></li>
+        <li><a href="acestream://aee0a595220e0f1c2fee725fd1dbc602d7152a9a" target="_blank">M. Deportes 3 1080</a></li>
+        <li><a href="acestream://42e83c337ece0af9ca7808859f84c7960e9cb6f5" target="_blank">M. Deportes 4 1080</a></li>
+        <li><a href="acestream://b1e5abc48195b7ca9b2ee1b352e790eb9f7292e3" target="_blank">M. Deportes 5 1080</a></li>
+        <li><a href="acestream://8587ed8ac36ac477e1d4176d3159a38bd154d4ce" target="_blank">M. Deportes 6 720</a></li>
+        <li><a href="acestream://2448f1d084f440eed2fbe847e24f1c02f5659a78" target="_blank">M. Deportes 7 1080</a></li>
+    </ul>
+    
+	<h1 onclick="toggleList('m-plus')">
+        M. Plus y Copa
+        <img src="https://upload.wikimedia.org/wikipedia/commons/d/d9/Movistar%2B_Logo.png" alt="Icono M. La Liga" width="100" height="100" />
+    </h1>
+    <ul id="m-plus">
+        <li><a href="acestream://5a236fbbe6e5bbfec03db548c244a7c858d675c0" target="_blank">M. Plus 1080</a></li>
+        <li><a href="acestream://8ba764f6a3bce6eae87ec71208fad1aa3a20528d" target="_blank">Copa 1080</a></li>
+        <li><a href="acestream://d6cdd724a97fcf851e7ef641c28d6beb8663496e" target="_blank">Copa 1080 Plus</a></li>
+        <li><a href="acestream://3a4c8ac955d451bf3c29b45256e74aa0ea82d281" target="_blank">Copa 1080 MultiAudio</a></li>
+        <li><a href="acestream://7d70685696722c2b1b48a5ae1a7f92c445d9443d" target="_blank">Copa 1080</a></li>
+        <li><a href="acestream://dab7cab5d6d177df36c3b333ca363c2266d91a03" target="_blank">Copa 720</a></li>
+        <li><a href="acestream://859bb6295b8d0f224224d3063d9db7cdeca03122" target="_blank">#Vamos 1080</a></li>
+        <li><a href="acestream://3bba7c95857c2502c7e03ced1a6a9b00eb567fa0" target="_blank">#Vamos 720</a></li>
+        <li><a href="acestream://67654e63b5065cdaa6c8e8d41bb5428b42b32830" target="_blank">#Ellas 1080</a></li>
+    </ul>
+
 </body>
 </html>
